# MathDraw

./: .gitignore  CMakeLists.txt  LICENSE.md  MathDraw.sln  README.md
.github/workflows/: cmake-multi-platform.yml  msbuild2.yml
doc/MainPage/: mainPage.md
doc/html/: _a_i_8cpp.html  _a_i_8hpp.html  _a_i_8hpp.js  _a_i_8hpp_source.html  _a_i_output_8cpp.html  _a_i_output_8hpp.html  _a_i_output_8hpp.js  _a_i_output_8hpp_source.html  _app_main_8cpp.html  _app_main_8cpp.js  _app_page_8md.html  _bucket_tool_8cpp.html  _bucket_tool_8hpp.html  _bucket_tool_8hpp.js  _bucket_tool_8hpp_source.html  _c_l_i_main_8cpp.html  _c_l_i_main_8cpp.js  _c_l_i_page_8md.html  _command.html  _content_image_8cpp.html  _content_image_8hpp.html  _content_image_8hpp.js  _content_image_8hpp_source.html  _documentation.html  _draw_tool_8cpp.html  _draw_tool_8hpp.html  _draw_tool_8hpp.js  _draw_tool_8hpp_source.html  _hidden_sub_command_8cpp.html  _hidden_sub_command_8h.html  _hidden_sub_command_8h.js  _hidden_sub_command_8h_source.html  _hidden_sub_command_8hpp.html  _hidden_sub_command_8hpp.js  _hidden_sub_command_8hpp_source.html  _main_8cpp.html  _math_draw_c_l_i.html  _net_8cpp.html  _net_8hpp.html  _net_8hpp.js  (+185 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+38 more)
doc/pages/: AppPage.md  CLIPage.md  mainPage.md
res/: model.pt
src/: AppMain.cpp  CLIMain.cpp  HiddenSubCommand.cpp  HiddenSubCommand.h  Main.cpp  MathDraw.sln  MathDraw.vcxproj  MathDraw.vcxproj.filters  Parser.cpp  Parser.h  RecogniseSubCommand.cpp  RecogniseSubCommand.h  ScaleSubCommand.cpp  ScaleSubCommand.h  SubCommand.h  TraverseSubCommand.cpp  TraverseSubCommand.h  Utilties.hpp
src/AI/: AI.cpp  AI.hpp
src/AI/Net/: Net.cpp  Net.hpp
src/AI/PixelTraversal/: PixelTraversal.cpp  PixelTraversal.hpp
src/AI/ResizeImage/: ResizeImage.cpp  ResizeImage.hpp
src/AI/ScaleImage/: ScaleImage.cpp  ScaleImage.hpp
src/GUI/: AIOutput.hpp  ContentImage.hpp  WindowManager.cpp  WindowManager.hpp
src/GUI/AIOutput/: AIOutput.cpp  AIOutput.hpp
src/GUI/ContentImage/: ContentImage.cpp  ContentImage.hpp
src/GUI/Tools/: DrawTool.hpp  Tool.hpp
src/GUI/Tools/BucketTool/: BucketTool.cpp  BucketTool.hpp
src/GUI/Tools/DrawTool/: DrawTool.cpp  DrawTool.hpp
src/GUI/Tools/Tool/: Tool.hpp
src/Parser/: Parser.cpp  Parser.h  Parser.hpp
src/Parser/HiddenSubCommands/: HiddenSubCommand.cpp  HiddenSubCommand.h  HiddenSubCommand.hpp
src/Parser/HiddenSubCommands/ResizeSubCommand/: ResizeSubCommand.cpp  ResizeSubCommand.hpp
src/Parser/HiddenSubCommands/ScaleSubCommand/: ScaleSubCommand.cpp  ScaleSubCommand.h  ScaleSubCommand.hpp
src/Parser/HiddenSubCommands/TraverseSubCommand/: TraverseSubCommand.cpp  TraverseSubCommand.h  TraverseSubCommand.hpp
src/Parser/RecogniseSubCommand/: RecogniseSubCommand.cpp  RecogniseSubCommand.h  RecogniseSubCommand.hpp
src/Parser/SubCommand/: SubCommand.cpp  SubCommand.hpp
src/Utilities/: Strings.cpp  Strings.hpp  Utilties.hpp
tests/: FunctionalityTest.cpp  Tests.cpp
